deploy/argo-cd/development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: k3s-demo1
          image: 192.168.1.41:$Image_ID
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: default
spec:
  ports:
    - name: http
      targetPort: 5005
      port: 80
  selector:
    app: gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway

spec:
  ingressClassName: nginx
  rules:
    - host: gateway.ms.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  name: http
